--- a/react/restobot-admin/public/index.html
+++ b/react/restobot-admin/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- Inter font -->
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
